Changed prediction API
